[gd_scene load_steps=16 format=3 uid="uid://blluf2fe3v25"]

[ext_resource type="Script" path="res://Global/Scripts/attaque_melee.gd" id="1_03vs3"]
[ext_resource type="Texture2D" uid="uid://c4bvg4ky0jx0v" path="res://Global/ImportImage/ParDefaut/AttaqueOnde.png" id="2_7dgae"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0i72k"]
atlas = ExtResource("2_7dgae")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_omf0x"]
atlas = ExtResource("2_7dgae")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1uqs"]
atlas = ExtResource("2_7dgae")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hq6o0"]
atlas = ExtResource("2_7dgae")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac0tj"]
atlas = ExtResource("2_7dgae")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cu7t7"]
atlas = ExtResource("2_7dgae")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7h30"]
atlas = ExtResource("2_7dgae")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcr0i"]
atlas = ExtResource("2_7dgae")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp28x"]
atlas = ExtResource("2_7dgae")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_exh4x"]
atlas = ExtResource("2_7dgae")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnrup"]
atlas = ExtResource("2_7dgae")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hinh"]
atlas = ExtResource("2_7dgae")
region = Rect2(128, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_liuy3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i72k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omf0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1uqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq6o0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac0tj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cu7t7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7h30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7h30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7h30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcr0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp28x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exh4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnrup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hinh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i72k")
}],
"loop": false,
"name": &"Attaque",
"speed": 20.0
}]

[node name="AttaqueMeleeLucius" type="Area2D"]
script = ExtResource("1_03vs3")

[node name="AttaqueMelee" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_liuy3")
animation = &"Attaque"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-13, -23, -22, -29, -12, -30, 8, -20, 21, -2, 21, 16, 11, 27, 6, 31, -10, 31, 0, 13, -1, -2, -7, -17)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AttaqueMelee" to="." method="_on_attaque_melee_animation_finished"]
